--- a/app/sass/_mixins.scss
+++ b/app/sass/_mixins.scss
@@ -15,3 +15,13 @@
     content: "";
   }
 }
+
+/*
+ * Border Radius
+ */
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
