--- a/app/sass/components/_tables.scss
+++ b/app/sass/components/_tables.scss
@@ -5,6 +5,7 @@
   border-collapse: separate;
   text-align: left;
   border: 1px solid #bebebe;
+  @include user-select(none);
   thead{
     tr{
       background-color: #f5f5f5;
@@ -20,9 +21,10 @@
       &:nth-child(even){
         background-color: #f5f5f5;
       }
-      &:active{
+      &:focus{
         background-color: #015cdc;
-        color:#fff
+        color:#fff;
+        outline: none
       }
       td{
         padding: 2px 15px;
