--- a/app/styles/neutron-all.scss
+++ b/app/styles/neutron-all.scss
@@ -1,3 +1,6 @@
+// SMACSS Property Order
+// https://github.com/brigade/scss-lint/blob/master/data/property-sort-orders/smacss.txt
+
 @import 'osx';
 @import 'windows';
 @import 'kiosk';
