--- a/app/styles/utilities/_index.scss
+++ b/app/styles/utilities/_index.scss
@@ -1,4 +1,5 @@
-@import "directional";
-@import "functions";
-@import "mixins";
-@import "variables";
+@import 'directional';
+@import 'functions';
+@import 'mixins';
+@import 'helpers';
+@import 'variables';
