--- a/app/styles/components/_form-controls.scss
+++ b/app/styles/components/_form-controls.scss
@@ -1,17 +1,17 @@
-input[type="text"],
+input[type='text'],
 textarea,
-select{
+select {
   min-height: 34px;
   padding: 6px 8px;
-  font-size: $body-font-size;
-  line-height: 20px;
-  color: $text-gray-dark;
-  vertical-align: middle;
-  background-color: $bg-white;
   border: 1px solid $border-gray-dark;
   border-radius: 3px;
   outline: none;
+  background-color: $bg-white;
+  color: $text-gray-dark;
+  font-size: $body-font-size;
+  line-height: 20px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+  vertical-align: middle;
 
   &.active,
   &:focus {
@@ -21,8 +21,10 @@ select{
   }
 }
 
-input[type=checkbox]{
+input[type=checkbox] {
+  margin: 0;
   font-size: 16px;
+
   &:focus {
     outline: none;
   }
