--- a/app/styles/components/_tables.scss
+++ b/app/styles/components/_tables.scss
@@ -1,40 +1,43 @@
-.table{
+.table {
   width: 100%;
-  border: 0;
-  border-spacing: 0;
-  border-collapse: separate;
-  text-align: left;
   border: 1px solid $border-gray;
   border-top-color: $border-gray-light;
+  text-align: left;
+  border-collapse: separate;
+  border-spacing: 0;
 
-  thead{
-    tr{
-      th{
-        font-weight: $font-weight-normal;
-        font-size: $font-size-small;
-        padding: 5px 15px;
+  thead {
+    tr {
+      th {
+        padding: 5px;
         border-right: 1px solid lighten($border-gray-light, 10%);
         border-bottom: 1px solid $border-gray-light;
+        font-size: $font-size-small;
+        font-weight: $font-weight-normal;
       }
     }
   }
-  tbody{
-    tr{
-      &:nth-child(even){
+
+  tbody {
+    tr {
+      &:nth-child(even) {
         background-color: $bg-gray-light;
       }
-      &:focus{
+
+      &:focus {
+        outline: none;
         background-color: $focus-bg;
         color: $text-white;
-        outline: none
       }
-      td{
-        padding: 2px 15px;
+
+      td {
+        padding: 2px 5px;
       }
     }
   }
-  tfoot{
-    tr{
+
+  tfoot {
+    tr {
       background-color: $bg-gray-light;
     }
   }
