--- a/app/styles/themes/osx/_helpers.scss
+++ b/app/styles/themes/osx/_helpers.scss
@@ -1,29 +1,31 @@
 
 // Auto fucus outline
-.auto-focus{
+.auto-focus {
   position: relative;
+
   &:after {
-    content: '';
     display: block;
     position: absolute;
     top: -9px;
+    right: -9px;
     bottom: -9px;
     left: -9px;
-    right: -9px;
+    transition: all 0.2s;
+    border: 4px solid rgba($focus-border, 0.6);
     border-radius: 3px;
-    border: 4px solid rgba( $focus-border, .6 );
-    pointer-events: none;
-    transition: all .2s;
+    content: '';
     opacity: 0;
+    pointer-events: none;
   }
-  &.active{
-    border-color: rgba( $focus-border, .6 );
+
+  &.active {
+    border-color: rgba($focus-border, 0.6);
+
     &:after {
       top: -4px;
+      right: -4px;
       bottom: -4px;
       left: -4px;
-      right: -4px;
-      opacity: 1;
     }
   }
 }
