--- a/app/styles/utilities/_directional.scss
+++ b/app/styles/utilities/_directional.scss
@@ -9,8 +9,7 @@ $dir: ltr !default;
 @function if-ltr($if, $else: null) {
   @if $dir != rtl {
     @return $if;
-  }
-  @else {
+  }@else {
     @return $else;
   }
 }
@@ -26,8 +25,7 @@ $right: if-ltr(right, left);
   @if $dir == rtl and length($values) >= 4 {
     // Reorder right and left positions in list
     @return nth($values, 1) nth($values, 4) nth($values, 3) nth($values, 2);
-  }
-  @else {
+  }@else {
     @return $values;
   }
 }
@@ -37,15 +35,12 @@ $right: if-ltr(right, left);
 	// Reorder right and left positions in list
 	@if length($values) == 2 {
 		@return nth($values, 2) nth($values, 1);
-	}
-	@else if length($values) == 3 {
+	}@else if length($values) == 3 {
 		@return nth($values, 2) nth($values, 1) nth($values, 2) nth($values, 3);
-	}
-	@else {
+	}@else {
 		@return nth($values, 2) nth($values, 1) nth($values, 4) nth($values, 3);
 	}
-  }
-  @else {
+  }@else {
     @return $values;
   }
 }
