complete buttons set

--- a/app/styles/themes/osx/_variables.scss
+++ b/app/styles/themes/osx/_variables.scss
@@ -17,6 +17,10 @@ $font-size-large:   18px !default;
 
 // ---- Colors ----
 $primary:           #005ed4 !default;
+$positive:          #49c03c !default;
+$negative:          #FF4949 !default;
+$warning:           #FFC82C !default;
+$info:              #1FB6FF !default;
 
 // Action colors
 $focus-bg:          #005ed4 !default;
