--- a/app/styles/elements/_tables.scss
+++ b/app/styles/elements/_tables.scss
@@ -1,5 +1,6 @@
 .table {
   width: 100%;
+  background-color: $bg-white;
   border: 1px solid $border-gray;
   border-top-color: $border-gray-light;
   text-align: left;
