--- a/app/styles/themes/osx/_base.scss
+++ b/app/styles/themes/osx/_base.scss
@@ -7,9 +7,11 @@ body {
   color: $text-black;
   font-family: $body-font;
   font-size: $body-font-size;
+  margin: 0;
 }
 
 * {
+  box-sizing: border-box;
   &:focus {
     outline: none;
     text-decoration: none;
