button gradient border bug fix

--- a/app/styles/elements/buttons/_index.scss
+++ b/app/styles/elements/buttons/_index.scss
@@ -6,3 +6,12 @@
 @import 'negative';
 @import 'warning';
 @import 'info';
+
+
+.small{
+  padding: 2px 10px;
+}
+
+.large{
+  padding: 6px 20px;  
+}
