--- a/app/styles/themes/osx/_variables.scss
+++ b/app/styles/themes/osx/_variables.scss
@@ -22,6 +22,13 @@ $negative:          #FF4949 !default;
 $warning:           #FFC82C !default;
 $info:              #1FB6FF !default;
 
+// Base colors
+$black:             #000 !default;
+$gray:              #666 !default;
+$gray-dark:         #333 !default;
+$gray-light:        #999 !default;
+$white:             #fff !default;
+
 // Action colors
 $focus-bg:          #005ed4 !default;
 
