--- a/app/styles/elements/buttons/_default.scss
+++ b/app/styles/elements/buttons/_default.scss
@@ -3,23 +3,22 @@
   display: inline-block;
   position: relative;
   min-width: 70px;
-  padding: 4px 15px;
-  border: 1px solid transparent;
-  border-radius: 6px;
+  padding: 3px 15px;
+  border: 0;
+  border-radius: 4px;
   background-color: $bg-white;
-  background-clip: padding-box;
   background-image: none;
   color: $text-gray;
   font-size: 13px;
   font-weight: 500;
-  line-height: 13px;
+  line-height: 1;
   white-space: nowrap;
   cursor: default;
   vertical-align: middle;
   user-select: none;
   position: relative;
 
-  &:after {
+  &:before {
     position: absolute;
     top: -1px;
     right: -1px;
@@ -35,7 +34,7 @@
     background-image: linear-gradient(#3d8cff 0%, #3683f8 25%, #2273ed 50%, #1468e4 75%, #0d5cd5 100%);
     color: $text-white;
 
-    &:after {
+    &:before {
       background-image: linear-gradient(#3080fc 50%, #1048af 100%);
     }
   }
