--- a/app/styles/themes/osx/index.scss
+++ b/app/styles/themes/osx/index.scss
@@ -8,3 +8,41 @@
 
 @import 'elements/index';
 @import 'components/index';
+
+
+.window{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+// Neutron content
+.n-content{
+  position: relative;
+  overflow-y: auto;
+  display: flex;
+  flex: 1;
+}
+
+.pane-group{
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.pane{
+  position: relative;
+  overflow-y: auto;
+  flex: 1;
+}
+
+main{
+  background-color: #fff
+}
