--- a/app/styles/elements/_form-controls.scss
+++ b/app/styles/elements/_form-controls.scss
@@ -1,6 +1,5 @@
 input[type='text'],
-textarea,
-select {
+textarea {
   min-height: 34px;
   padding: 6px 8px;
   border: 1px solid $border-gray-dark;
