--- a/app/styles/elements/buttons/_index.scss
+++ b/app/styles/elements/buttons/_index.scss
@@ -7,11 +7,13 @@
 @import 'warning';
 @import 'info';
 
+.btn{
 
-.small{
+  &.small{
   padding: 2px 10px;
-}
+  }
 
-.large{
-  padding: 6px 20px;  
+  &.large{
+    padding: 6px 10px;
+  }
 }
