--- a/app/styles/elements/buttons/_index.scss
+++ b/app/styles/elements/buttons/_index.scss
@@ -6,14 +6,15 @@
 @import 'negative';
 @import 'warning';
 @import 'info';
+@import 'group';
 
 .btn{
 
-  &.small{
+  &.btn-small, .btn-small &{
   padding: 2px 10px;
   }
 
-  &.large{
+  &.btn-large, .btn-large &{
     padding: 6px 10px;
   }
 }
